--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -8,17 +8,17 @@ spring:
     gateway:
       routes:
         - id: task-service
-          uri: http://localhost:8081
+          uri: http://task-service:8081
           predicates:
             - Path=/api/tasks/**
 
         - id: user-service
-          uri: http://localhost:8082
+          uri: http://user-service:8082
           predicates:
             - Path=/api/users/**
 
         - id: notification-service
-          uri: http://localhost:8083
+          uri: http://notification-service:8083
           predicates:
             - Path=/api/notifications/**
 
