--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <module>task-service</module>
     <module>user-service</module>
     <module>notification-service</module>
+    <module>analytics-service</module>
   </modules>
 
   <properties>
