--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
+      - name: Build Docker images
+        run: docker compose build
+
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
