--- a/task-service/src/main/resources/application.yaml
+++ b/task-service/src/main/resources/application.yaml
@@ -16,6 +16,11 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
+    username: admin
+    password: admin123
 
 management:
   endpoints:
