--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,11 @@ jobs:
       - name: SonarCloud analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-          -Dsonar.projectKey=MilaBikar_task-app-devops \
-          -Dsonar.organization=milabikar \
-          -Dsonar.host.url=https://sonarcloud.io
+        run: |
+          mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+            -Dsonar.projectKey=MilaBikar_task-app-devops \
+            -Dsonar.organization=milabikar \
+            -Dsonar.host.url=https://sonarcloud.io
 
 
       - name: Build Docker images
