--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
             -Dsonar.projectKey=MilaBikar_task-app-devops \
             -Dsonar.organization=milabikar \
             -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.qualitygate.wait=true
+
 
 
       - name: Build Docker images
