--- a/user-service/src/main/resources/application-prod.yaml
+++ b/user-service/src/main/resources/application-prod.yaml
@@ -1,3 +1,6 @@
+server:
+  port: ${PORT:8082}
+
 spring:
   datasource:
     url: ${SPRING_DATASOURCE_URL}
@@ -8,3 +11,12 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: always
