--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,7 +20,7 @@ jobs:
         run: docker compose up -d --build
 
       - name: Wait for services to start
-        run: timeout /t 30
+        run: powershell -Command "Start-Sleep -Seconds 30"
 
       - name: Health check - All services
         run: |
