--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,7 +26,14 @@ jobs:
         run: |
           $ports = @(8080,8081,8082,8083,8084)
           foreach ($port in $ports) {
-              $resp = Invoke-WebRequest "http://localhost:$port/actuator/health" -UseBasicParsing
-              if ($resp.StatusCode -ne 200) { throw "Service on port $port not healthy" }
+              $up = $false
+              for ($i=0; $i -lt 12; $i++) {  # retry 12 puta (60s)
+                  try {
+                      $resp = Invoke-WebRequest "http://localhost:$port/actuator/health" -UseBasicParsing
+                      if ($resp.StatusCode -eq 200) { $up=$true; break }
+                  } catch {}
+                  Start-Sleep -Seconds 5
+              }
+              if (-not $up) { throw "Service on port $port did not become healthy" }
           }
       
